[package]
name = "envc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4" # Aligning version based on compatibility with block modes
cbc = { version = "0.2.0", features = ["pkcs7-padding"] } # Example version, adjust based on actual available version
rand = "0.8.5"